<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MU Pub Crawl</string>
    
    <string name="action_settings">Settings</string>
    <string-array name="locations">
        
    </string-array>
    <string name="select_bar">Click the bar below to view a list of bars.</string>
    <string name="set_city">Choose this Bar!</string>
    <string name="viewAll">View All Drinks</string>
    <string name="landosContact">41 South Bridge St, Corning, NY</string>
    <string name="changosContact">21 N Main St, Mansfield, PA 16933</string>
    <string name="changosPhone">570.662.7633</string>
    <string name="landosPhone">607.936.3612</string>
    <string name="noResultsSpecials">Your bar may not offer any Happy Hour Specials.\nHere is a cute picture instead.</string>
    <string name="taxi">Don\'t drink and drive! Get a taxi here! </string>
    <string name="tiogaTaxiName">Canyon Country Cabs</string>
    <string name="tiogaTaxiPhone">570.724.2424</string>
    <string name="tiogaTaxiHours">Open from 6am - 3pm</string>
    <string name="bradfordTaxiName">Valley Taxi</string>
    <string name="bradfordTaxiPhone">570.888.2365</string>
    <string name="bradfordTaxiHours">Open 24 hours a day</string>
    <string name="corningTaxiName">Vets One Taxi Service</string>
    <string name="corningTaxiPhone">607.962.8294</string>
    <string name="corningTaxiHours">Open 24 hours a day</string>
    <string name="anthonysContact">776 Canton St, Troy, PA 16947</string>
    <string name="anthonysPhone">570.297.4567</string>
    <string name="landosHours">Mon–Wed 11–5pm\nTh–Sat 11–1:30am\nSun CLOSED</string>
    <string name="changosHours">M–Sat 11am–2am\nSun 12pm–2am</string>
    <string name="anthonysHours">Mon–Th 11am–12am\n Fri–Sat 11am–2am\nSun 10am–8pm</string>
    <string name="specials">Happy Hour Specials</string>
    <string name="setBarTester"/>
    <string name="Hours">Hours:</string>
    <string name="PicHolder">Pic of Bar</string>
    <string name="changosSpecials">Monday:\nPurple Haze Bottles $2.50\n\nTuesday:\nHand Grenades $3.00\n\nWednesday:\nPlatinum Pounders $2.50\n\nThursday:\nMiller High Life Draft $2.00\n\nFriday:\nSex on the Beach $3.00\n\nSaturday:\nCaptain &amp; Pepsi $3.00\n\nSunday:\nBud Light Draft $2.00</string>
    <string name="landosSpecials">Landos Happy Hour Specials</string>
    <string name="anthonysSpecials">Anthonys Happy Hour Specials</string>
    <string name="beamhousePhone">814. 258.5608</string>
    <string name="beamhouseContact">109 N Buffalo St, Elkland, PA 16920</string>
    <string name="beamhouseHours">Mon –Sat 3pm–2am\nSun 12pm–2am</string>
    <string name="beamhouseSpecials">Mon - Fri\n6 - 8\nAll Draft Beer is $1.00</string>
    <string name="capnHours">Mon-Th 11am-11pm\nFri 11am-1am\nSat 12pm-1am\nSun 12pm-11pm</string>
    <string name="capnContact">36 Bridge Street Corning, NY 14830</string>
    <string name="capnPhone">607.962.1616</string>
    <string name="capnSpecials">Monday:\n$3 Molson Canadian bottle\n$2.50 Molson Canadian drafts\n\nWednesday:\n$2.50 Yuengling Drafts\n\nFriday:\nHappy hour 4-7\n$4 Well Drinks\n$5 Glass of Wine\n$4 Craft Beers</string>
    <string name="captainContact">616 Main St, Towanda, PA 18848</string>
    <string name="captainHours">Sun-Th 11am-1:30am\nFri-Sat 11am-2:30am</string>
    <string name="captainPhone">570.265.1329</string>
    <string name="captainSpecials">Monday:\n5 - 7 Beer Pitcher $6.00\n\nTuesday:\n 5 - 7 Pint $1.00\n\nWednesday:\nAll Day Yuengling mug $1.00\n\nThursday:\n7 - 9 Pint $1.00\n\nFriday:\nAll Day Budwiseer $1.00\n\nSaturday:\n9 - 11 Well drinks $2.00\n\nSunday:\nAll day Miller Light Mug $1.00</string>
    <string name="centralContact">16749 Route 6 Burlington, PA 18814</string>
    <string name="centralPhone">570.297.2337</string>
    <string name="centralSpecials">Monday:\nBud $2.25\n\nTuesday:\nCoors Light $2.25\n\nWednesday:\nBusch Light $2.00\n\nThursday:\nKeystone Light $2.00\n\nFriday:\nCaptain &amp; Coke $3.00\n\nSaturday:\nMiller Light $2.25\n\nSunday:\nBloody Mary $3.00</string>
    <string name="centralHours">Mon-Thur: 11am-12am\nFri-Sat: 11am-1am\nSun: 12:30pm-12am</string>
    <string name="erwinnaContact">820 Addison Rd, Painted Post, NY 14870</string>
    <string name="erwinnaPhone">607.654.7343</string>
    <string name="erwinnaSpecials">Monday - Friday:\n 2:30 - 4:30\n$.25 off all Beer\n\nChill Hour Monday - Thursday:\n11pm-1am\n$.25 off all drinks </string>
    <string name="erwinnaHours">Mon-Sat: 9am-1am\nSun: 12pm-12am</string>
    <string name="gaslightContact">35 Main St, Wellsboro, PA 16901</string>
    <string name="gaslightPhone">570.724.1031</string>
    <string name="gaslightSpecials">Happy Hour Specials Daily 6-8</string>
    <string name="gaslightHours">Mon-Sat: 10am-2:30am\nSun: 11am-2:30am</string>
    <string name="maleysContact">92 E Market Street Corning, NY 14830</string>
    <string name="maleysPhone">607.936.2170</string>
    <string name="maleysHours">Mon-Fri: 2pm-1am\nSat-Sun: 12pm-1am</string>
    <string name="maleysSpecials">Happy hour every day 2-7pm!\nShot of the day $3 (Always something new)\n$1 off all domestic beers during Happy Hour</string>
    <string name="mchalesSpecials">Happy Hour 6 - 8 Every Day!\n Coors Light $2.00</string>
    <string name="mchalesPhone">607.542.5280</string>
    <string name="mchalesContact">57 South Bridge St, Corning, NY 14830</string>
    <string name="mchalesHours">Mon-Sat: 6pm-1am\nSun: CLOSED</string>
    <string name="oaksContact">96 W Market Street Corning, NY 14830</string>
    <string name="oaksPhone">607.937.2604</string>
    <string name="oaksSpecials">Monday &amp; Wednesday:\nTall 25oz Bud Light &amp; Labatt Blue Light $3.50\n\nThursday:\n$3 Bomb Shots\n\nFriday:\nBuckets of domestics $15 (5 beers)\n\nSaturday:\nMiller Lite 16oz $3</string>
    <string name="oaksHours">Mon-Thurs 11am-11pm\nFri-Sat 12pm-1am\nSun 12pm-11pm</string>
    <string name="oldContact">3591 Route 6, Wellsboro, PA 16901</string>
    <string name="oldPhone">814.435.6300</string>
    <string name="oldHours">Mon-Thur: 3pm- 9pm\nFri-Sun 11am-10pm</string>
    <string name="oldSpecials"/>
    <string name="williesContact">7647 Route 49, Osceola, PA 16942</string>
    <string name="williesPhone">814.258.5761</string>
    <string name="williesHours">Mon-Sat: 11am-10pm\nSun 1pm-10pm</string>
    <string name="williesSpecials"/>
    <string name="woodysContact">214 Main St, Towanda, PA 18848</string>
    <string name="woodysPhone">570.265.5787</string>
    <string name="woodysSpecials"/>
    <string name="woodysHours">Mon: 2pm-11pm\nTue:11am-11pm\nWed-Fri: 11am-2am\nSat: 2pm-2am\nSun: 2pm-11pm</string>
    <string name="changos">Chango\'s Cantina</string>
    <string name="landos">Lando\'s Lounge</string>
    <string name="anthonys">Anthony\'s Bar &amp; Grill</string>
    <string name="beamhouse">The Beamhouse</string>
    <string name="capn">Capn Morgan\'s</string>
    <string name="captain">Captain Jack\'s</string>
    <string name="central">Central on 6</string>
    <string name="erwinna">Erwinna Tavern</string>
    <string name="gaslight">Gaslight Bar &amp; Grill</string>
    <string name="maleys">Maley\'s Pub</string>
    <string name="mchales">McHales Go Go Bar</string>
    <string name="oaks">Oak\'s Sports Bar</string>
    <string name="old">Old Antler Inn</string>
    <string name="willies">Willie\'s Bar &amp; Grill</string>
    <string name="woodys">Woody\'s Ale House</string>
    <string name="that">That Other Place</string>
    <string name="thatHours">Wed: 6pm-12am\nTh: 5pm-12am\nFri: 5pm-1am\nSat:6pm-1am</string>
    <string name="thatContact">1 W Pulteney St, Corning, NY 14830</string>
    <string name="thatPhone">N/A</string>
    <string name="featuredBar">Click the picture for the featured bar!</string>
   

</resources>
