<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/taxiName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/corningTaxiName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/taxiPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/taxiName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/bradfordTaxiPhone"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/taxiHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/taxiPhone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/tiogaTaxiHours"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
